update agenda with doc links

--- a/meetings/2026-02-06-agenda.md
+++ b/meetings/2026-02-06-agenda.md
@@ -1,9 +1,13 @@
 LARIAC Cleanup Meeting Agenda - 2026-02-06
 
 1. Review project goals and non-goals
+   - Reference: https://github.com/ucla-data-science-center/lariac-data-cleanup/blob/main/README.md
 2. Discuss Dataverse-as-sole-entry-point strategy
+   - Reference: https://github.com/ucla-data-science-center/lariac-data-cleanup/blob/main/CONTEXT.md
 3. Storage inventory review: geospatial, lariac, and personal drives
-4. S3 bucket decommissioning plan
-5. Dataverse dataset cleanup: removing text file cruft
-6. Phase 1 tasks and assignments for Jamie
-7. Next steps and timeline
+   - Reference: https://github.com/ucla-data-science-center/lariac-data-cleanup/blob/main/DRIVE_INVENTORY.md
+4. S3 bucket decommissioning plan and Dataverse dataset cleanup
+   - Reference: https://github.com/ucla-data-science-center/lariac-data-cleanup/blob/main/DESIRED_STATE.md
+5. Phase 1 tasks and assignments for Jamie
+   - Reference: https://github.com/ucla-data-science-center/lariac-data-cleanup/issues/1
+6. Next steps and timeline
