Update meeting agenda with new discussion points
Added additional discussion points for the meeting agenda.

--- a/meetings/2026-02-06-agenda.md
+++ b/meetings/2026-02-06-agenda.md
@@ -2,8 +2,10 @@ LARIAC Cleanup Meeting Agenda - 2026-02-06
 
 1. Review project goals and non-goals
    - Reference: https://github.com/ucla-data-science-center/lariac-data-cleanup/blob/main/README.md
+   - Clean up dataverse, identify where we are pointing ppl to. 
 2. Discuss Dataverse-as-sole-entry-point strategy
    - Reference: https://github.com/ucla-data-science-center/lariac-data-cleanup/blob/main/CONTEXT.md
+   - we just need to make sure it's clear. 
 3. Storage inventory review: geospatial, lariac, and personal drives
    - Reference: https://github.com/ucla-data-science-center/lariac-data-cleanup/blob/main/DRIVE_INVENTORY.md
 4. S3 bucket decommissioning plan and Dataverse dataset cleanup
